# torpedodge-clients

./: README.md
.github/workflows/: ci.yaml
example/: main.go
golang/: README.md  avoid_bomb.go  circle_sail.go  go.mod  go.sum  main.go  manual.go  strategy.go
golang/inputs/: gamestate.go
golang/outputs/: moves.go
javascript/: README.md  index.js  package-lock.json  package.json
kotlin/: README.md  settings.gradle.kts
kotlin/app/: build.gradle.kts
kotlin/app/src/main/: App.kt
npc/: Dockerfile  go.mod  go.sum  main.go
python/: README.md  main.py  pyproject.toml
