[tool.poetry]
name = "torpedodge-bot"
version = "1.0.0"
description = "Python bot for Torpedodge"
authors = ["Julien Midedji <Julien.Midedji@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websocket-client = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
